alignments fixed

--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -8,8 +8,6 @@ body{
 }
 
 #logo {
-    /*font-family: Rockwell, serif;*/
-    /*font-size: 3em;*/
     float: left;
     width: 75%
 }
@@ -17,13 +15,6 @@ body{
 #logo img{
     width: 35%;
 }
-
-/*#logo span {*/
-    /*font-size: 0.72em;*/
-    /*text-decoration: overline;*/
-    /*color: white;*/
-    /*text-shadow: 1px 1px 1px black;*/
-/*}*/
 
 #logged-user-details{
     float: left;
@@ -131,6 +122,10 @@ body{
     padding: 5px;
 }
 
+#module-submit-button{
+    padding: 2px;
+}
+
 .clear-float {
     clear: both;
 }
@@ -164,7 +159,7 @@ body{
     margin: 5px 0px;
     float: right;
 }
-#schedule-generator #hours-pr-day-input{
+#hours-pr-day-input{
     width: 50px;
 }
 #schedule-generator form{
@@ -179,7 +174,7 @@ body{
     text-decoration: underline;
     cursor: hand;
 }
-#schedule-generator #schedule-submit-button{
+#schedule-submit-button{
     padding: 3px;
 }
 
@@ -189,10 +184,14 @@ body{
 
 #schedule-generator-input{
     display: inline-block;
+    height: 120px;
+    vertical-align: top;
 }
 
 #deadline-generator-input{
     display: inline-block;
+    height: 120px;
+    vertical-align: top;
 }
 
 #loading-text{
